--- a/munit-http/pom.xml
+++ b/munit-http/pom.xml
@@ -8,18 +8,9 @@
 		<relativePath>../../Mule4-ParentBuild/Parent</relativePath>
 	</parent>
 
-	<groupId>org.deloitte.cd</groupId>
-	<artifactId>munit-http</artifactId>
-    <version>1.0.0-SNAPSHOT</version>
-    <packaging>mule-application</packaging>
+	<groupId>org.deloitte.cd</groupId><artifactId>munit-http</artifactId><version>1.0.0-SNAPSHOT</version><packaging>mule-application</packaging><name>munit-http</name>
 
-	<name>munit-http</name>
-
-    <properties>
-		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-    </properties>
-
+    <properties><project.build.sourceEncoding>UTF-8</project.build.sourceEncoding><project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding></properties>
 	<build>
 		<plugins>
 			<plugin>
