--- a/munit-http/pom.xml
+++ b/munit-http/pom.xml
@@ -1,34 +1,21 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 <modelVersion>4.0.0</modelVersion>
-	<parent>
-		<groupId>org.deloitte.cd</groupId>
-		 <artifactId>parentpom</artifactId>
-		<version>2.1.5-SNAPSHOT</version>
-		<relativePath>../../Mule4-ParentBuild/Parent</relativePath>
-	</parent>
+	<parent><groupId>org.deloitte.cd</groupId><artifactId>parentpom</artifactId><version>2.1.5-SNAPSHOT</version><relativePath>../../Mule4-ParentBuild/Parent</relativePath></parent>
 
 	<groupId>org.deloitte.cd</groupId><artifactId>munit-http</artifactId><version>1.0.0-SNAPSHOT</version><packaging>mule-application</packaging><name>munit-http</name>
 
     <properties><project.build.sourceEncoding>UTF-8</project.build.sourceEncoding><project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding></properties>
 	<build>
-		<plugins>
-			<plugin>
-				<groupId>org.mule.tools.maven</groupId>
-				<artifactId>mule-maven-plugin</artifactId>
-				<version>${mule.maven.plugin.version}</version>
-				<extensions>true</extensions>
-				<configuration>
-				<classifier>mule-application</classifier>
-                </configuration>
-			</plugin>
-		<plugin>
-                <groupId>com.mulesoft.munit.tools</groupId>
-                <artifactId>munit-maven-plugin</artifactId>
-                <version>${munit.version}</version>
-                <executions>
-                    <execution>
-                        <id>test</id>
+<plugins>
+	<plugin>		<groupId>org.mule.tools.maven</groupId>		<artifactId>mule-maven-plugin</artifactId>		<version>${mule.maven.plugin.version}</version>		<extensions>true</extensions>		<configuration>		<classifier>mule-application</classifier>                </configuration>	</plugin>
+	<plugin>
+		<groupId>com.mulesoft.munit.tools</groupId>
+           <artifactId>munit-maven-plugin</artifactId>
+             <version>${munit.version}</version>
+             <executions>
+          <execution>
+          <id>test</id>
                         <phase>test</phase>
                         <goals>
                             <goal>test</goal>
